--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -6,16 +6,16 @@
   <meta name="description" content="Create Retrieve Update Delete" />
   <meta name="keywords" content="HTML5 CSS3 Bootstrap JS" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="img/1.png" type="image/x-icon" />
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/style.css" />
   <title>CRUD</title>
 </head>
 
 <body class="body">
-
-  <section class="container my-4">
-    <div class="w-75 mx-auto px-4 py-2 border border-2 rounded-4">
-      <h1 class="text-center m-0 py-2">Product Management System</h1>
+  <section class="container">
+    <div class="w-75 mx-auto py-3">
+      <h1 class="text-center py-2">Product Management System</h1>
       <div class="form-group mb-3">
         <label for="productName" class="mb-2">productName</label>
         <input type="text" class="form-control" id="productName" placeholder="Enter name" />
@@ -32,9 +32,8 @@
         <label for="productDesc" class="mb-2">productDesc</label>
         <textarea name="productDesc" id="productDesc" class="form-control" placeholder="Description"></textarea>
       </div>
-      <button onclick="addProduct()" class="btn btn-primary my-2" id="addProductBtn">Add product</button>
-      <button onclick="updateProduct()" class="btn btn-warning d-none my-2" id="updateProductBtn">Update
-        product</button>
+      <button class="btn btn-primary" id="addProductBtn">Add product</button>
+      <button class="btn btn-warning d-none" id="updateProductBtn">Update product</button>
     </div>
     <div class="w-75 mx-auto py-3">
       <h2 class="h3">Search...</h2>
@@ -55,10 +54,12 @@
     </table>
   </section>
   
-  <script src="https://cdn.socket.io/3.1.3/socket.io.min.js"
-    integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh"
+  <!-- Socket.io and main.js scripts -->
+  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"
+    integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO"
     crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
+
 </body>
 
 </html>
