Refactor product management app using socket.io

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -17,35 +17,35 @@
     <div class="w-75 mx-auto py-3">
       <h1 class="text-center py-2">Product Management System</h1>
       <div class="form-group mb-3">
-        <label for="productName" class="mb-2">productName</label>
+        <label for="productName" class="mb-2">Product name</label>
         <input type="text" class="form-control" id="productName" placeholder="Enter name" />
       </div>
       <div class="form-group mb-3">
-        <label for="productPrice" class="mb-2">productPrice</label>
+        <label for="productPrice" class="mb-2">Product price</label>
         <input type="number" class="form-control" id="productPrice" placeholder="Enter price" />
       </div>
       <div class="form-group mb-3">
-        <label for="productModel" class="mb-2">productModel</label>
+        <label for="productModel" class="mb-2">Product model</label>
         <input type="text" class="form-control" id="productModel" placeholder="Enter model" />
       </div>
       <div class="form-group mb-3">
-        <label for="productDesc" class="mb-2">productDesc</label>
+        <label for="productDesc" class="mb-2">Product description</label>
         <textarea name="productDesc" id="productDesc" class="form-control" placeholder="Description"></textarea>
       </div>
       <button class="btn btn-primary" id="addProductBtn">Add product</button>
       <button class="btn btn-warning d-none" id="updateProductBtn">Update product</button>
     </div>
-    <div class="w-75 mx-auto py-3">
+    <!-- <div class="w-75 mx-auto py-3">
       <h2 class="h3">Search...</h2>
       <input oninput="searchByName(this.value)" type="text" class="form-control" placeholder="Search here">
-    </div>
+    </div> -->
     <table class="table w-75 text-center mx-auto">
       <thead>
-        <th>Index</th>
-        <th>productName</th>
-        <th>productPrice</th>
-        <th>productModel</th>
-        <th>productDesc</th>
+        <th>Number</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Model</th>
+        <th>Description</th>
         <th>Update</th>
         <th>Delete</th>
       </thead>
